--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Effective Frontend testing</title>
-<meta name="Description" content="Progressive Web App talk's slides">
+<meta name="Description" content="Effective Frontend testing slides">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#5B9BD5">
 
