--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="icon" type="image/png" sizes="192x192" href="img/icons/icon-192x192.png">
 
 <meta name="twitter:site" content="@maxpou">
-<meta name="twitter:title" content="Progressive web apps">
+<meta name="twitter:title" content="Effective Frontend testing">
 
 <link rel="stylesheet" href="reveal.js/css/reveal.css">
 <link rel="stylesheet" href="css/bootstrap-grid.min.css">
