fix speaking url

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ document.getElementsByTagName('head')[0].appendChild(link);
   </section>
   <section>
     <h2>Slides, links, etc.</h2>
-    <h2><a href="https://www.maxpou.fr/talks/">maxpou.fr/talks/</a></h2>
+    <h2><a href="http://localhost:8000/speaking/#others-presentations">maxpou.fr/speaking/</a></h2>
   </section>
 </section>
 <section>
